--- a/index.html
+++ b/index.html
@@ -399,6 +399,11 @@
     </div>
         <div class="score" id="score" >white's Turn</div>
         <div class="credit" id="credit" >Developed By Mohamed Amine Hmida</div>
+<script>
+  document.addEventListener('touchstart', function(event) {
+    event.preventDefault();
+  });
+</script>
     <script>
 var blackturn = 0;
 var used=[];
