--- a/index.html
+++ b/index.html
@@ -399,11 +399,6 @@
     </div>
         <div class="score" id="score" >white's Turn</div>
         <div class="credit" id="credit" >Developed By Mohamed Amine Hmida</div>
-<script>
-  document.addEventListener('touchstart', function(event) {
-    event.preventDefault();
-  });
-</script>
     <script>
 var blackturn = 0;
 var used=[];
@@ -500,6 +495,7 @@ function validate_name() {
     name = document.getElementById("username").value;
     document.getElementById("welcome").innerHTML = "Welcome ".concat(" ", name);
     checkroom();
+    checkname();
     document.getElementById("log").innerHTML = "change name";}
     
 function validate_room() {
