--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ function validate_room() {
     room = document.getElementById("room").value;
     start_new_game(0);
     /*   document.getElementById("score").innerHTML = room;   */   
-    checkroom();
+    checkroom(room);
     sleep(100);
     sleep(100);
     sleep(100);
