--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <title>Chess Game</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width , height=device-height, initial-scale=1.0 , maximum-scale=1.0, user-scalable=no">
-    
-    <title>Document</title>
     <style>
         .cbody {
           background-color: rgba(255, 223, 178, 0.5);
@@ -106,8 +104,7 @@
           text-align: center;
           margin: auto;
           font-size: 6vw;
-          user-select: none
-        }
+          user-select: none}
         .log_name {
           color: rgb(59, 62, 255);
           background-color: rgba(129, 129, 129, 0.152);
@@ -125,13 +122,11 @@
         .name {
           width: 30vw;
           text-align: center;
-          margin: auto;
-        }
+          margin: auto;}
         .room {
           width: 30vw;
           text-align: center;
-          margin: auto;
-        }
+          margin: auto;}
         .welcome {
           width: 100%;
           text-align: center; 
@@ -173,6 +168,8 @@
             .replaynow123{
                 margin-top: 0px ;
                 margin-bottom:0px ;}
+            .offline {
+                font-size: 5vh;}
             .title {
                 font-size: 5vh;}
             .Replay {
@@ -189,9 +186,8 @@
                 margin-bottom: 1px ;}
             .welcome {
                 font-size: 5vh;
-                margin-top: 2vh ;
-                margin-bottom: 2vh;
-            }
+                margin-top: 3vh ;
+                margin-bottom: 3vh;}
             .log_name {
                 font-size: 3vh;
                 width: 30vh;
@@ -209,8 +205,7 @@
                 width: 30vh;
                 height: 5vh;
                 margin-top: 10px;
-                margin-bottom: 10px;
-            }
+                margin-bottom: 10px;}
             .room {
                 font-size: 3vh;
                 width: 30vh;
@@ -226,15 +221,15 @@
         @media (aspect-ratio < 400/580) {
             .replaynow{
                 margin-top: calc( (100vh - 50vw) /5 );
-                margin-bottom: calc( (100vh - 50vw) /5);
-            }
+                margin-bottom: calc( (100vh - 50vw) /5);}
             .replaynow123{
                 margin-top: 0px ;
-                margin-bottom: 0px ;
-            }
+                margin-bottom: 0px ;}
+            .offline {
+                font-size: 7vw;
+                height: 12vw;}
             .title {
-                font-size: 8vw;
-            }
+                font-size: 8vw;}
             .Replay {
                 height: 5vh;
                 font-size: 4vw;
@@ -262,12 +257,12 @@
             .welcome{
                 display: flex;
                 width: max-content;
-                height:50px;
+                height:10vw;
                 text-align: center;
                 font-size: 6vw;
                 gap: 4vw ;
-                margin-top: calc( (100vh - 50vw) /5 );
-                margin-bottom: calc( (100vh - 50vw) /5);}
+                margin-top: calc( (100vh - 70vw) /10 );
+                margin-bottom: calc( (100vh - 70vw) /10);}
             .score {
                 position: absolute;
                 bottom: 6vh;
@@ -299,6 +294,7 @@
     </div>
 
     <div class="welcome" id="welcome" >Welcom to Chess Online</div>
+    <div class="welcome" id ="welcome2" ><button class="offline" id="offline" onclick="offline_game()">♜ 2-player ♝</button></div>
     <div class="grid-container" id="chessboard">
 
         <div class="grid-item-empty" id = "J9" > </div>
@@ -500,6 +496,10 @@ function initiate_game() {
     document.getElementById("to remove 1").style = "display:flex";
     document.getElementById("to remove 2").style = "display:flex";
     document.getElementById("welcome").style = "display:block";
+    document.getElementById("welcome2").style = "display:block";
+    document.getElementById("offline").style = "display:block";
+
+
     document.getElementById("replaynow").classList.remove("replaynow123");
     document.getElementById("replaynow").classList.add("replaynow");
     document.getElementById("score").innerHTML = "Join a room to start";
@@ -520,13 +520,24 @@ function quitgame() {
     
 }
 
+function offline_game() {
+    initiate_game();
+    offlinegame = 1;
+    start_party();
+
+}
+
 function start_party() {
     document.getElementById("to remove 1").style = "display:none";
     document.getElementById("to remove 2").style = "display:none";
     document.getElementById("welcome").style = "display:none";
+    document.getElementById("welcome2").style = "display:none";
+    document.getElementById("offline").style = "display:none";
+
 
     document.getElementById("replaynow").style = "display:flex";
     document.getElementById("chessboard").style = "display:grid";
+
 
     document.getElementById("replaynow").classList.remove("replaynow");
     document.getElementById("replaynow").classList.add("replaynow123");
