--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
           width: 30vw;
           text-align: center;
           margin: auto;}
+        .offline { 
+          margin: auto;}
         .welcome {
           width: 100%;
           text-align: center; 
