--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
                 margin-bottom: 1px ;}
             .welcome {
                 font-size: 5vh;
+                margin-right: auto;
+                margin-left: auto;}
                 margin-top: 3vh ;
                 margin-bottom: 3vh;}
             .log_name {
