--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             .welcome {
                 font-size: 5vh;
                 margin-right: auto;
-                margin-left: auto;}
+                margin-left: auto;
                 margin-top: 3vh ;
                 margin-bottom: 3vh;}
             .log_name {
