--- a/index.html
+++ b/index.html
@@ -1858,7 +1858,7 @@ function endgame() {
     } else if (blackturn === 0) {
     if (offlinegame === 0) {
             // online game
-            if (hoster === !blackturn) {
+            if (hoster) {
                 document.getElementById("score").innerHTML = "♔ You Win The Game ! ♔";
             }else{
                 document.getElementById("score").innerHTML = "♔".concat( opponent_name ," Wins The Game ! ♔");
@@ -1870,7 +1870,7 @@ function endgame() {
     } else {
         if (offlinegame === 0) {
             // online game
-            if (!hoster === blackturn) {
+            if (!hoster) {
                 document.getElementById("score").innerHTML = "♔ You Win The Game ! ♔";
             }else{
                 document.getElementById("score").innerHTML = "♔".concat( opponent_name ," Wins The Game ! ♔");
@@ -1926,6 +1926,7 @@ function changeturn() { // to update in online case
             kingschecked[1] = 1;
         }else {
             kingschecked[1] = 0;
+            normalcolor(kingspos[1]);
         }
              
     } else {
@@ -1953,6 +1954,7 @@ function changeturn() { // to update in online case
             kingschecked[0] = 1;
         } else {
             kingschecked[0] = 0;
+            normalcolor(kingspos[0]);
         }
     }
     
