--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@
                 inputSecond--;
                 if (inputSecond<10 && inputMinute === 0 && inputHour === 0){
                     //
+                    stop_all_sounds();
                     document.getElementById("clock-ticking").play();
                     // new Audio('./clock-ticking.mp3').play()
                     document.getElementById("Replay").style.color = "#FF0000";
@@ -655,6 +656,7 @@ function quitgame() {
     }
         StopClock();
         //
+        stop_all_sounds();
         document.getElementById("quitsound").play(); 
         // new Audio('./quit.mp3').play()
         initiate_game();
@@ -683,6 +685,7 @@ function start_party() {
     document.getElementById("replaynow").classList.add("replaynow123");
     play()
     //
+    stop_all_sounds();
     document.getElementById("start").play();
     // new Audio('./start.mp3').play()
     if (offlinegame === 0) {
@@ -820,6 +823,7 @@ function checkroomavailablity(room) { // joiner (can become hoster) (hoster conf
         gameRef.off()
         //start game now
         //
+        stop_all_sounds();
         document.getElementById("join").play();
         // new Audio('./join.mp3').play()
         setTimeout(() => { 
@@ -856,6 +860,7 @@ function checkforjoin() { // hoster
             // start game now
             hoster = 1;
             //
+            stop_all_sounds();
             document.getElementById("join").play();
             // new Audio('./join.mp3').play()
             setTimeout(() => { 
@@ -2026,18 +2031,25 @@ function changeturn() { // to update in online case
 function playsound() {
     if (to_be_played === 1 /* move sound */) {
         //
+        stop_all_sounds();
         document.getElementById("move").play();
         // new Audio('./move.mp3').play()
     }else if (to_be_played === 2 /* capture sound */) {
         //
+        stop_all_sounds();
         document.getElementById("move-capture").play();
         // new Audio('./move-capture.mp3').play()
     }else if (to_be_played = 3 /* check sound */) {
         //
+        stop_all_sounds();
         document.getElementById("move-check").play();
         // new Audio('./move-check.mp3').play()
     }
 to_be_played = 0;
+}
+
+function stop_all_sounds() {
+    document.querySelectorAll('audio').forEach(el => el.pause());
 }
 
 function timeup() {
@@ -2048,7 +2060,6 @@ function timeup() {
     document.getElementById("score").innerHTML = "Time Up , You Lost (quit)";
     document.getElementById("score").style.backgroundColor = "#FFAA00";
     document.getElementById("score").style.color = "#000000";
-    document.getElementById("quit").disabled = true;
     sendmove("timeup");
 }else {
     StopClock();
@@ -2057,7 +2068,6 @@ function timeup() {
     document.getElementById("score").innerHTML = "Time Up , You Won (quit)";
     document.getElementById("score").style.backgroundColor = "#00FF00";
     document.getElementById("score").style.color = "#000000";
-    document.getElementById("quit").disabled = true;
 }
 }
 
